# opensearch-scylla-comparison

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ingest/: README.md  example.env
ingest/src/: download_raw_csv.py  generate_embeddings.py  ingest_opensearch.py  migrate.py
src/: embedding_creator.py  main.py  opensearch_client.py  opensearch_search.py  schema.cql  scylla_search.py
src/static/: app.js  style.css
src/templates/: index.html
src/templates/partials/: results_container_A.html  results_container_B.html
src/templates/ui/: result_item.html
